# RocketScience

./: .gitignore  CMakeLists.txt  Makefile  README.md
lib/: CMakeLists.txt
lib/cudd/: CMakeLists.txt  Makefile
lib/cudd/cudd/: cuddSubsetHB.c
lib/cudd/util/: saveimage.c
lib/parserlib/: CMakeLists.txt  ast.cpp  ast.hpp
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  abstraction_utils.cpp  abstraction_utils.hpp  ast.cpp  ast.hpp  ast_abstraction.cpp  ast_cfg.cpp  ast_con.cpp  ast_construction.cpp  ast_contains.cpp  ast_copy.cpp  ast_extend.cpp  ast_ignore.cpp  ast_post.cpp  ast_prettyprint.cpp  ast_replace.cpp  ast_scope.cpp  ast_trace.cpp  ast_validation.cpp  ast_wp.cpp  ast_z3.cpp  trace.cpp  trace.hpp
src/cegar/: CMakeLists.txt  cegar.cpp  cegar.hpp  constraints.cpp  constraints.hpp  interpolate.cpp  interpolate.hpp
src/explizit/: CMakeLists.txt  Common.hpp  Configuration.hpp  Formula.hpp  Reachability.cpp  Reachability.hpp  SimpleCSVReader.hpp  StateTransitionSystem.cpp  StateTransitionSystem.hpp  StateTransitionSystemLoader.cpp  StateTransitionSystemLoader.hpp  StateTransitionSystemLoaderDEBUG.cpp
src/parser/: CMakeLists.txt  ast.cpp  ast.hpp  grammar.cpp  grammar.hpp  parser.cpp  parser.hpp
src/symbolic/: CMakeLists.txt  ControlFlowGraph.cpp  ControlFlowGraph.hpp  Reachability.cpp  Reachability.hpp  StateTransitionSystem.hpp
test/: CMakeLists.txt  RocketScience.cpp  program.c
test/explizit/: BaeumeBlatt2Aufgabe3.cpp  BigReachability.cpp  CMakeLists.txt  CSVTest.cpp  CSVTestDEBUG.cpp  ComparatorTest.cpp  ExplicitTest.cpp  SimpleReachabilityTest.cpp
test/explizit/csv/: BaeumeBlatt2Aufgabe3.csv  big.py  big_v10_d5.csv  big_v20_d10.csv  big_v20_d13.csv  big_v3_d2.csv  simple.csv  test.csv
test/symbolic/: CFG_devl.cpp  CMakeLists.txt  Fib.cpp  LongTest.cpp  PetriNet.cpp  PetriNetUglyFormula.cpp  SimpleTest.cpp
